--- a/.dockerignore
+++ b/.dockerignore
@@ -1,49 +1,49 @@
-# Git
-.git
-.gitignore
-
-# Documentation
-README.md
-*.md
-
-# Build artifacts
-bin/
+# Binaries
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+bin/
+dist/
 
 # Test files
 *_test.go
 *.test
+*.out
+coverage.txt
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
-
-# Environment files
+# Development files
 .env
 .env.local
 .env.*.local
+*.log
+.DS_Store
+.vscode/
+.idea/
+
+# Git
+.git/
+.gitignore
+.gitattributes
+
+# Documentation
+*.md
+!README.md
+docs/
+
+# CI/CD
+.github/
+.gitlab-ci.yml
+.travis.yml
 
 # Docker
-Dockerfile
+Dockerfile*
+docker-compose*.yml
 .dockerignore
-docker-compose.yml
 
-# Client node_modules (will be built in Docker)
-../hrmsclient/node_modules/
-../hrmsclient/dist/
-../hrmsclient/.vite/
-
+# Build artifacts
+*.swp
+*.swo
+*~
+.cache/
